Stopped clearing storage on page load.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <script>
 
-	localStorage.clear('toplist')
+	// localStorage.clear('toplist')
 
 	// Initialize localStorage
 	var defaultModel = [
