Changed default text and layout to make operation more obvious

--- a/index.html
+++ b/index.html
@@ -41,27 +41,11 @@
 	// Initialize localStorage
 	var defaultModel = [
 		{
-			"title": "Why?",
+			"title": "type something here...",
 			"items": [
-				"in other apps, you just keep adding things",
-				"you can't find the important things anymore",
-				"here, there's only space for the important"
-			]
-		},
-		{
-			"title": "Projects",
-			"items": [
-				"go to venus",
-				"create llama from scratch",
-				"send quantum emails"
-			]
-		},
-		{
-			"title": "New habits",
-			"items": [
-				"tell stories with the word 'hobbit'",
-				"lucid dream about Star Wars",
-				"wear cologne (w/smell of freshly-baked bread)"
+				"... and here",
+				"         ... or here",
+				"               ... maybe here"
 			]
 		},
 		{
@@ -73,19 +57,35 @@
 			]
 		},
 		{
-			"title": "Life goals",
+			"title": "",
 			"items": [
-				"become bestselling author on Mars",
-				"write book - How to make a llama",
-				"be friends with an alien"
+				"",
+				"",
+				""
 			]
 		},
 		{
-			"title": "Llama book chapters",
+			"title": "Why?",
 			"items": [
-				"sequencing llama DNA",
-				"obtaining regulatory approval",
-				"taking care of your llama"
+				"todo lists & evernote just grow",
+				"until you lose track of the important things",
+				"here, there's only space for the important"
+			]
+		},
+		{
+			"title": "",
+			"items": [
+				"",
+				"",
+				""
+			]
+		},
+		{
+			"title": "Stats",
+			"items": [
+				"6 lists",
+				"3 items each",
+				""
 			]
 		}
 	]
